# opengl_simple_raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  OpenGLRayTrace.cpp  assets.cmake  iwyu-mappings.imp  utils.cmake
assets/shaders/: bufferless_triangle.frag  bufferless_triangle.vert  raytrace.glsl
camera/: CMakeLists.txt  camera.cpp
camera/include/OpenGLRayTrace/: camera.h
shaders/: raytrace.glsl
src/: CMakeLists.txt  OpenGLRayTrace.cpp
src/camera/: CMakeLists.txt  camera.cpp
src/filesystem/: CMakeLists.txt
src/filesystem/include/OpenGLRayTrace/: filesystem.h
src/shaders/: CMakeLists.txt
src/shaders/include/OpenGLRayTrace/: shaders.h
src/window/: CMakeLists.txt
src/window/include/OpenGLRayTrace/: window.h
